--- a/.github/workflows/gradle-build-and-publish.yml
+++ b/.github/workflows/gradle-build-and-publish.yml
@@ -73,6 +73,10 @@ on:
         required: true
       aws_region:
         required: false
+      application_id:
+        required: true
+      application_private_key:
+        required: true
     outputs:
       published_artifact_version:
         description: "The version of the published artifact."
@@ -135,12 +139,22 @@ jobs:
           fi
           ./gradlew publish ${PUBLISH_ARGS[@]}
 
+      - name: Get app token
+        if: ${{ secrets.application_id != '' && secrets.application_private_key != '' }}
+        id: get_workflow_token
+        uses: peter-murray/workflow-application-token-action@v4
+        with:
+          application_id: ${{ secrets.application_id }}
+          application_private_key: ${{ secrets.application_private_key }}
+
       - name: Create tag
         if: ${{ inputs.create_tag == 'true' }}
         run: |
           git config --global user.email "github@justice.gov.uk"
           git config --global user.name "GitHub Actions Bot"
           ./gradlew release -Prelease.useAutomaticVersion=true
+        env:
+          GITHUB_TOKEN: ${{ steps.get_workflow_token.outputs.token || env.GITHUB_TOKEN }}
 
       - name: Capture published version
         if: ${{ inputs.publish_package == 'true' }}
