--- a/.github/workflows/gradle-build-and-publish.yml
+++ b/.github/workflows/gradle-build-and-publish.yml
@@ -95,6 +95,8 @@ jobs:
     env:
       GITHUB_TOKEN: ${{ secrets.gh_token }}
       AWS_REGION: ${{ secrets.aws_region }}
+      APPLICATION_ID: ${{ secrets.application_id }}
+      APPLICATION_PRIVATE_KEY: ${{ secrets.application_private_key }}
 
     outputs:
       published_artifact_version: ${{ steps.capture_published_version.outputs.published_artifact_version }}
@@ -142,7 +144,7 @@ jobs:
           ./gradlew publish ${PUBLISH_ARGS[@]}
 
       - name: Get app token
-        if: ${{ secrets.application_id != '' && secrets.application_private_key != '' }}
+        if: ${{ env.APPLICATION_ID != '' && env.APPLICATION_PRIVATE_KEY != '' }}
         id: get_workflow_token
         uses: peter-murray/workflow-application-token-action@v4
         with:
