--- a/.github/workflows/gradle-build-and-publish.yml
+++ b/.github/workflows/gradle-build-and-publish.yml
@@ -68,10 +68,20 @@ on:
         required: false
         type: string
         default: build/reports/jacoco
+      github_bot_username:
+        required: false
+        type: string
+        default: github-actions-bot
     secrets:
       gh_token:
         required: true
       aws_region:
+        required: false
+      github_app_id:
+        required: false
+      github_app_private_key:
+        required: false
+      github_app_organisation:
         required: false
     outputs:
       published_artifact_version:
@@ -89,12 +99,28 @@ jobs:
     env:
       GITHUB_TOKEN: ${{ secrets.gh_token }}
       AWS_REGION: ${{ secrets.aws_region }}
+      GITHUB_APP_ID: ${{ secrets.github_app_id }}
+      GITHUB_APP_PRIVATE_KEY: ${{ secrets.github_app_private_key }}
 
     outputs:
       published_artifact_version: ${{ steps.capture_published_version.outputs.published_artifact_version }}
 
     steps:
+      - name: Get app token
+        if: ${{ env.GITHUB_APP_ID != '' && env.GITHUB_APP_PRIVATE_KEY != '' }}
+        id: get_workflow_token
+        uses: peter-murray/workflow-application-token-action@v4
+        with:
+          application_id: ${{ secrets.github_app_id }}
+          application_private_key: ${{ secrets.github_app_private_key }}
+          organization: ${{ secrets.github_app_organisation }}
       - uses: actions/checkout@v4
+        if: ${{ inputs.create_tag != 'true' }}
+      - uses: actions/checkout@v4
+        if: ${{ inputs.create_tag == 'true' }}
+        with:
+          ref: main
+          token: ${{ steps.get_workflow_token.outputs.token || env.GITHUB_TOKEN }}
       - name: Set up JDK ${{ inputs.java_version }}
         uses: actions/setup-java@v4
         with:
@@ -133,9 +159,16 @@ jobs:
       - name: Create tag
         if: ${{ inputs.create_tag == 'true' }}
         run: |
-          git config --global user.email "github@justice.gov.uk"
-          git config --global user.name "GitHub Actions Bot"
+          if [ -z "${{ steps.get_workflow_token.outputs.token }}" ]; then
+            echo "GitHub App token will not be used for this run."
+          else
+            echo "GitHub App token will be used for this run."
+          fi
+          git config --global user.email "${{ inputs.github_bot_username }}[bot]@users.noreply.github.com"
+          git config --global user.name "${{ inputs.github_bot_username }}[bot]"
           ./gradlew release -Prelease.useAutomaticVersion=true
+        env:
+          GITHUB_TOKEN: ${{ steps.get_workflow_token.outputs.token || env.GITHUB_TOKEN }}
 
       - name: Capture published version
         if: ${{ inputs.publish_package == 'true' }}
