--- a/.github/workflows/gradle-build-and-publish.yml
+++ b/.github/workflows/gradle-build-and-publish.yml
@@ -179,6 +179,13 @@ jobs:
             VERSION=$(grep "version=" gradle.properties | cut -d'=' -f2)
           fi
           echo "published_artifact_version=${VERSION}" >> $GITHUB_OUTPUT
+          if [[ -n "${{ inputs.publish_package }}" ]]; then
+            echo "Artifact published with version: \`${VERSION}\`" >> $GITHUB_STEP_SUMMARY
+            echo "Published artifact version: $VERSION"
+          else
+            echo "Current artifact version: \`${VERSION}\`" >> $GITHUB_STEP_SUMMARY
+            echo "Current artifact version: $VERSION"
+          fi
           echo "Artifact published with version: \`${VERSION}\`" >> $GITHUB_STEP_SUMMARY
           echo "Published artifact version: $VERSION"
 
