--- a/.github/workflows/gradle-build-and-publish.yml
+++ b/.github/workflows/gradle-build-and-publish.yml
@@ -36,6 +36,10 @@ on:
         required: false
         type: string
         default: false
+      override_tagged_branch:
+        required: false
+        type: string
+        default: main
       junit_results:
         required: false
         type: string
@@ -119,7 +123,7 @@ jobs:
       - uses: actions/checkout@v4
         if: ${{ inputs.create_tag == 'true' }}
         with:
-          ref: main
+          ref: ${{ inputs.override_tagged_branch }}
           token: ${{ steps.get_workflow_token.outputs.token || env.GITHUB_TOKEN }}
       - name: Set up JDK ${{ inputs.java_version }}
         uses: actions/setup-java@v4
