--- a/.github/workflows/ecr-publish-image.yml
+++ b/.github/workflows/ecr-publish-image.yml
@@ -48,6 +48,10 @@ on:
         required: true
       ecr_registry:
         required: false
+      truststore_certficate:
+        required: false
+      truststore_password:
+        required: false
     outputs:
       published_image_version:
         description: "The version of the published image."
@@ -94,6 +98,12 @@ jobs:
         with:
           registries: ${{ secrets.ecr_registry }}
         id: login-another-ecr
+
+      - name: Generate certificate truststore
+        if: @{{ secrets.truststore_certificate != '' }}
+        run: |
+          echo ${{ secrets.truststore_certificate }} > cert.pem
+          keytool -importcert -alias cert -file cert.pem -keystore truststore.jks -storepass ${{ secrets.truststore_password }} -noprompt
 
       - name: Setup Gradle
         uses: gradle/actions/setup-gradle@v4
