--- a/.github/workflows/ecr-publish-image.yml
+++ b/.github/workflows/ecr-publish-image.yml
@@ -100,7 +100,7 @@ jobs:
         id: login-another-ecr
 
       - name: Generate certificate truststore
-        if: @{{ secrets.truststore_certificate != '' }}
+        if: ${{ secrets.truststore_certificate != '' }}
         run: |
           echo "${{ secrets.truststore_certificate }}" > cert.pem
           keytool -importcert -alias cert -file cert.pem -keystore truststore.jks -storepass ${{ secrets.truststore_password }} -noprompt
