--- a/.github/workflows/ecr-publish-image.yml
+++ b/.github/workflows/ecr-publish-image.yml
@@ -52,6 +52,8 @@ on:
         required: false
       truststore_password:
         required: false
+      truststore_directory:
+        required: false
     outputs:
       published_image_version:
         description: "The version of the published image."
@@ -69,6 +71,7 @@ jobs:
       GITHUB_TOKEN: ${{ secrets.gh_token }}
       ECR_REGISTRY: ${{ secrets.ecr_registry }}
       TRUSTSTORE_CERTIFICATE: ${{ secrets.truststore_certificate }}
+      TRUSTSTORE_PASSWORD: ${{ secrets.truststore_password }}
 
     outputs:
       published_image_version: ${{ steps.publish-image.outputs.published_image_version }}
@@ -103,8 +106,16 @@ jobs:
       - name: Generate certificate truststore
         if: ${{ env.TRUSTSTORE_CERTIFICATE != '' }}
         run: |
+          if [ -z "${{ secrets.truststore_password }}" ]; then
+            echo "A truststore password is required."
+            exit 1
+          fi
+          if [ -z "${{ secrets.truststore_directory }}" ]; then
+            echo "A truststore directory is required."
+            exit 1
+          fi
           echo "${{ secrets.truststore_certificate }}" > cert.pem
-          keytool -importcert -alias cert -file cert.pem -keystore truststore.jks -storepass ${{ secrets.truststore_password }} -noprompt
+          keytool -importcert -alias cert -file cert.pem -keystore ${{ secrets.truststore_directory }}/truststore.jks -storepass ${{ secrets.truststore_password }} -noprompt
 
       - name: Setup Gradle
         uses: gradle/actions/setup-gradle@v4
