--- a/.github/workflows/ecr-publish-image.yml
+++ b/.github/workflows/ecr-publish-image.yml
@@ -46,6 +46,12 @@ on:
         required: true
       ecr_role_to_assume:
         required: true
+      ecr_registry:
+        required: false
+      root_certificate:
+        required: false
+      binding_directory:
+        required: false
     outputs:
       published_image_version:
         description: "The version of the published image."
@@ -61,6 +67,8 @@ jobs:
 
     env:
       GITHUB_TOKEN: ${{ secrets.gh_token }}
+      ECR_REGISTRY: ${{ secrets.ecr_registry }}
+      ROOT_CERTIFICATE: ${{ secrets.root_certificate }}
 
     outputs:
       published_image_version: ${{ steps.publish-image.outputs.published_image_version }}
@@ -81,9 +89,29 @@ jobs:
           aws-region: ${{ secrets.ecr_region }}
 
       - name: Login ecr
-        if: ${{ inputs.publish == 'true' }}
+        if: ${{ inputs.publish == 'true' && env.ECR_REGISTRY == '' }}
         uses: aws-actions/amazon-ecr-login@v2
         id: login-ecr
+
+      - name: Login ecr in different registry
+        if: ${{ inputs.publish == 'true' && env.ECR_REGISTRY != '' }}
+        uses: aws-actions/amazon-ecr-login@v2
+        with:
+          registries: ${{ secrets.ecr_registry }}
+        id: login-another-ecr
+
+      - name: Configure certificate binding
+        if: ${{ env.ROOT_CERTIFICATE != '' }}
+        run: |
+          if [ -z "${{ secrets.binding_directory }}" ]; then
+            echo "A binding directory is required."
+            exit 1
+          fi
+          mkdir -p ${{ secrets.binding_directory }}
+          echo "${{ secrets.root_certificate }}" > ${{ secrets.binding_directory }}/root_cert.pem
+          echo "ca-certificates" > ${{ secrets.binding_directory }}/type
+          echo "created certificate binding"
+          tree ${{ secrets.binding_directory }}
 
       - name: Setup Gradle
         uses: gradle/actions/setup-gradle@v4
@@ -91,7 +119,7 @@ jobs:
       - name: Build image
         id: build-image
         env:
-          REGISTRY: ${{ steps.login-ecr.outputs.registry }}
+          REGISTRY: ${{ steps.login-ecr.outputs.registry || steps.login-another-ecr.outputs.registry }}
           REPOSITORY: ${{ secrets.ecr_repository }}
         run: |
           gradle_subproject=''
